fix reply head gap

--- a/custom.css
+++ b/custom.css
@@ -121,7 +121,7 @@ ts-jumper input[type="text"],
 .p-message_pane .c-message_list.c-virtual_list--scrollbar>.c-scrollbar__hider:before, .p-message_pane .c-message_list:not(.c-virtual_list--scrollbar):before {
     background: var(--background);
 }
-.p-message_pane__limited_history_foreword {	
+.p-message_pane__limited_history_foreword {
     color: var(--text);
 	background: var(--background-elevated);
 }
@@ -280,8 +280,8 @@ li.active[class] span,
 
 #client_body::before, #client_body:not(.onboarding):before {
   border-bottom: 1px solid var(--border-dim) !important;
-  background: var(--background);
-  box-shadow: none;
+  background: var(--background) !important;
+  box-shadow: none !important;
 }
 
 #client_body, #messages_container.has_top_messages_banner:before {
@@ -299,6 +299,12 @@ ts-jumper input[type="text"]::-webkit-input-placeholder {
 }
 
 #msg_input, #primary_file_button {
+  background: transparent !important;
+  color: var(--text) !important;
+  border-color: var(--border-dim) !important;
+}
+
+.inline_message_input_container, .inline_file_upload {
   background: transparent !important;
   color: var(--text) !important;
   border-color: var(--border-dim) !important;
@@ -1118,7 +1124,7 @@ ts-jumper ts-jumper-container {
 }
 .c-search_autocomplete__suggestion_content .c-channel_name .c-deprecated-icon, .c-search_autocomplete__suggestion_content .c-search_autocomplete__suggestion_icon, .c-search_autocomplete__suggestion_content .c-search_autocomplete__suggestion_text .filetype_description,
 .c-search_autocomplete__suggestion_content .c-search_autocomplete__suggestion_text .token
-{ 
+{
 	color: var(--text);
 }
 
@@ -1199,7 +1205,7 @@ ts-jumper ts-jumper-container {
 .p-apps_browser__app_limit_meter__blank_app_box {
     background-color: var(--background-hover);
 }
-.p-apps_browser__app--selected {	
+.p-apps_browser__app--selected {
     background: var(--background-hover);
 }
 /** menus **/
@@ -1299,7 +1305,7 @@ ts-jumper ts-jumper-container {
     background: var(--background);
 }
 .p-downloads_list__shift_hint {
-    background: linear-gradient(180deg,hsla(0,0%,100%,0),var(--background)); 
+    background: linear-gradient(180deg,hsla(0,0%,100%,0),var(--background));
 }
 .p-download_item {
     border: 1px solid var(--border-dim);
@@ -1335,7 +1341,7 @@ nav {
     background: var(--background-elevated);
 }
 
-.pmu-days * { 
+.pmu-days * {
    border: 1px solid var(--border-dim);
 }
 /* history loading */
@@ -1397,7 +1403,7 @@ nav {
     border: 1px solid var(--border-dim);
 }
 #client-ui .file_list_item .monospace {
-    color: var(--text);	
+    color: var(--text);
 }
 .c-pillow_file_container {
     background: var(--background);
@@ -1462,7 +1468,7 @@ nav {
 /* browse apps */
 .c-filter_input, .p-apps_browser__category_header {
     background: var(--background-elevated);
-}	
+}
 .p-apps_browser__category_header {
 	color: var(--text);
 }
@@ -1478,7 +1484,7 @@ nav {
     background: var(--background-elevated);
 }
 .tab_complete_ui ul.type_members .unify_broadcast {
-	color: var(--text);	
+	color: var(--text);
 }
 .c-mrkdwn__broadcast--mention, .c-mrkdwn__broadcast--mention:hover, .c-mrkdwn__highlight, .c-mrkdwn__mention, .c-mrkdwn__mention:hover, .c-mrkdwn__user_group--mention, .c-mrkdwn__user_group--mention:hover {
     background: var(--background-elevated);
@@ -1487,7 +1493,7 @@ nav {
 /* message thumbs up */
 .c-reaction {
     background: var(--background);
-    border: 1px solid var(--border-dim); 	
+    border: 1px solid var(--border-dim);
 }
 .c-reaction__count {
 	color: var(--text-bright);
